# loader

./: .gitignore
microservices/cursor-context-main/: .gitignore  (+3 more)
microservices/gdrive-sync-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
microservices/gdrive-sync-service/alembic/: env.py
microservices/gdrive-sync-service/alembic/versions/: 20260423_0001_create_files.py
microservices/gdrive-sync-service/app/: main.py
microservices/gdrive-sync-service/app/api/: audit_route.py  deps.py  diagnostics_route.py  files_route.py  health.py  sync_route.py
microservices/gdrive-sync-service/app/core/: logging_config.py  settings.py
microservices/gdrive-sync-service/app/db/: models.py  session.py
microservices/gdrive-sync-service/app/db/repositories/: files_repo.py
microservices/gdrive-sync-service/app/services/: dedupe.py  drive_client.py  drives_config.py  mime_utils.py  minio_client.py  paths.py  quality_audit.py  upload_pipeline.py  video_diagnostics.py  video_validator.py
microservices/gdrive-sync-service/app/workers/: celery_app.py  tasks.py
microservices/gdrive-sync-service/config/: config.example.yaml
microservices/gdrive-sync-service/docs/: DEPLOY-PROD.md  argo-cd-application.sample.yaml
microservices/gdrive-sync-service/k8s/: argo-application.example.yaml  configmap-drives.yaml  deployments.yaml  external-secret-minio.yaml
microservices/gdrive-sync-service/tests/: test_config_consistency.py  test_dedupe.py  test_files_repo.py  test_mime_utils.py  test_paths.py  test_video_validator.py
(+49 files in other folders)
